--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.0'
 	id 'io.spring.dependency-management' version '1.1.5'
+	id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
 
 group = 'codesquad'
@@ -19,6 +20,11 @@ configurations {
 
 repositories {
 	mavenCentral()
+}
+
+
+ext {
+	snippetsDir = file("build/generated-snippets")
 }
 
 apply from: './gradle/dependencies/querydsl.gradle'
@@ -50,8 +56,20 @@ dependencies {
 	testImplementation "com.navercorp.fixturemonkey:fixture-monkey-starter:1.0.14"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// Spring Rest Docs
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+	testImplementation 'org.springframework.restdocs:spring-restdocs-webtestclient'
+
 }
 
 tasks.named('test') {
+	outputs.dir snippetsDir
 	useJUnitPlatform()
+}
+
+tasks.named('asciidoctor') {
+	inputs.dir snippetsDir
+	dependsOn test
+	attributes 'snippets': snippetsDir
 }
